--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>hystrix</module>
         <module>nativeConfigServer</module>
         <module>nativeconfigclient</module>
+        <module>configServer</module>
     </modules>
 
     <parent>
